# tmp_repo

Multi-drone-scene-simulation-qt/: README.md
Multi-drone-scene-simulation-qt/qt/untitled/: QRosThread.cpp  QRosThread.h  mainwindow.h  taskfileselect.h
Multi-drone-scene-simulation-qt/qt/untitled/TaskFileSelect/: taskfileselect.cpp  taskfileselect.h
Multi-drone-scene-simulation-qt/qt/仿真工具说明文档/: 运行步骤.docx
Multi-drone-scene-simulation-qt/uav_simulation_qt/: uav_simulation_qt.pro
Multi-drone-scene-simulation-qt/uav_simulation_qt/Headers/: mainwindow.h
Multi-drone-scene-simulation-qt/uav_simulation_qt/Sources/: mainwindow.cpp
Multi-drone-scene-simulation-qt/uav_simulation_qt/src/: QRosThread.h  main.cpp
Multi-drone-scene-simulation-qt/untitled/: QRosThread.cpp  QRosThread.h  QWeb.ui  mainwindow.cpp  mainwindow.h  taskfileselect.cpp  untitled.pro
Multi-drone-scene-simulation-qt/untitled/Forms/: mainwindow.ui
Multi-drone-scene-simulation-qt/untitled/Sources/: mainwindow.cpp
Multi-drone-scene-simulation-qt/untitled/TaskFileSelect/: TaskFileSelect.pro
Multi-drone-scene-simulation-qt/仿真工具说明文档/: 环境安装.docx
Multi-drone-scene-simulation-ros/: README.md  requirements.txt  项目环境配置及部署运行说明.md
Multi-drone-scene-simulation-ros/px4_catkin_ws/data/bridge/: Obs_bridge.txt  new_subTask.txt  new_task_info.txt  waypoint_bridge.txt
Multi-drone-scene-simulation-ros/px4_catkin_ws/data/hill/: subTask_hill.txt  task_info_hill.txt
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/image_transport/: CMakeLists.txt
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/image_transport/src/: image_sub.cpp
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/start_execute_task/: package.xml
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/start_execute_task/src/: start_execute_task.cpp
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/start_view_point_plan/src/: start_view_point_plan.cpp
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/task_allocation/: CMakeLists.txt  package.xml
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/task_allocation/launch/: uavs15_bid.launch  uavs2_bid.launch
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/task_allocation/scripts/: center_allocate.py  uav_bid.py
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/task_loading/: CMakeLists.txt
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/task_loading/src/: TaskInfoLoad.cpp
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/task_management/: CMakeLists.txt
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/task_management/src/: task_management.cpp
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/uav_control/: package.xml
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/uav_control/launch/: campus.launch  highway.launch  hill.launch  multi_uav_mavros_sitl.launch  multi_uav_mavros_sitl_bridge.launch  multi_uav_mavros_sitl_hill.launch  (+6 more)
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/uav_msgs/: CMakeLists.txt
Multi-drone-scene-simulation-ros/px4_catkin_ws/src/application/view_point_plan/: package.xml
Multi-drone-scene-simulation-ros/scene-simulation/qt/untitled/: Resources.qrc  main.cpp  mainwindow.cpp  taskfileselect.cpp  taskfileselect.ui
Multi-drone-scene-simulation-ros/scene-simulation/qt/untitled/TaskFileSelect/: main.cpp  taskfileselect.ui
Multi-drone-scene-simulation-ros/scene-simulation/qt/仿真工具说明文档/: 环境安装.docx
Multi-drone-scene-simulation-ros/scene-simulation/ros/: requirements.txt
Multi-drone-scene-simulation-ros/scene-simulation/ros/仿真说明文档/: 环境安装.docx  运行步骤.docx
Multi-drone-scene-simulation-ros/scene-simulation/ros/仿真说明文档/px4修改参考文件/: 1045_p450
utrace/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  attacher.cpp  attacher.hh  main.cpp
utrace/example/: a.cpp  start-client.hpp  utrace-config.json
utrace/example-input/: a.cpp  a.out  config.toml
utrace/include/: common.hh  common.hpp  output.hh  trace.hh  watch.hh  watch.hpp
utrace/include/config/: coreutilConfig.hh  tarfileConfig.hh
utrace/include/trace/: gdb.hh  trace.hh
utrace/initialize/: common-config.hpp  dummy-config.hpp  initialize.cpp  internel-config.cpp  tar-config.hpp  vi-config.hpp
utrace/library2/: utrace-library.c  utrace.h
utrace/pid-monitor/: dummy-watch.cpp  exec-watch.cpp  socket-watch.cpp  watch.cpp
utrace/run-monitor/: attacher.cpp  gdb-hook.cpp  gdb-hook.hpp
utrace/script/: install.sh
utrace/service/: utrace.service  utrace.sh
utrace/src/: main.cpp
utrace/src/config/: config.cpp  coreutilConfig.cpp  tarfileConfig.cpp  whisperCppConfig.cpp
utrace/src/connect/: connect.cpp  connection.cpp  portSocket.cpp  receive.cpp  unix-domain-socket.cpp
utrace/src/include/config/: config.hh  coreutilConfig.hh  whisperCppConfig.hh
utrace/src/include/connect/: connect.hh  portSocket.hh  unixDomainSocket.hh
utrace/src/include/connection/: connection.hh  receive.hh
utrace/src/include/output/: output.hh
utrace/src/include/trace/: debugger-trace.hh  gdb.hh  none-debugger-trace.hh  trace.hh
utrace/src/initialize/: common-config.hpp  core-util-config.hpp  dummy-config.hpp  internel-config.cpp  tar-config.hpp  vi-config.hpp  whisper-cpp-config.hpp
utrace/src/output/: cmdline.cpp  data.cpp  output.cpp
utrace/src/pid-monitor/: dummy-watch.cpp  exec-watch.cpp  port.cpp  socket-watch.cpp  unix-domain-socket.cpp  watch.cpp
utrace/src/run-monitor/: attacher.cpp  gdb-hook.cpp
utrace/src/trace/: attacher.cpp  debugger-trace.cpp  gdb-hook.cpp  gdb.cpp  none-debugger-trace.cpp  trace.cpp
utrace/src/util/: util.cpp
(+156 files in other folders)
